2007-06-02  Inge Wallin  <inge@lysator.liu.se>

	Rename KatlasGlobe -> MarbleModel
	* src/lib/MarbleModel.h (): renamed from katlasglobe.h
	* src/lib/MarbleModel.cpp (): renamed from katlasglobe.cpp
	* src/katlascontrol.{h,cpp}: use new name
	* src/lib/MarbleWidget.{h,cpp}: use new name
	* src/lib/katlasviewpopupmenu.{h,cpp}: use new name
	* src/lib/katlasviewinputhandler.{h,cpp}: use new name

	Show zoom level in the status bar
	* src/KdeMainWindow.cpp (showZoom): new slot
	(createStatusBar): create zoom label
	(MainWindow): Show initial zoom level
	* src/katlascontrol.h (marbleWidget): New method
	* src/lib/MarbleWidget.h (zoom): New method.
	
2007-05-31  Inge Wallin  <inge@lysator.liu.se>

	Remove worthless APIDOX
	src/httpfetchfile.h		src/katlaswindrose.h
	src/placemarkinfodialog.h	src/katlascontrol.h
	src/placemarkmodel.h		src/katlasviewpopupmenu.h
	src/katlasmapscale.h		src/katlasviewinputhandler.h
	src/measuretool.h		src/vectormap.h
	src/placemarkpainter.h		src/TileLoader.h
	src/tinywebbrowser.h		src/texcolorizer.h
	src/katlasaboutdialog.h		src/placemarkmanager.h
	src/HttpDownloadManager.h	src/marblecontrol.h
	src/TextureMapper.h		src/katlasflag.h
	src/vectorcomposer.h		src/GridMap.h
	src/katlastilecreatordialog.h	src/katlasthemeselectview.h
	src/katlascrosshair.h		src/tilescissor.h
	src/FastMath.h			src/clippainter.h
	src/TextureTile.h:
	Remove apidox only consisting of @author so that the resulting
	output only contains actual information.
	
	Add APIDOX
	* src/MarbleWidget.h (class MarbleWidget): Add class docs and some
	method docs.
	* src/MarbleControlBox.h (class MarbleControlBox): Add class docs
	and some method docs.
	* src/katlasglobe.h (class KAtlasGlobe): Add class docs.

	Rename KAtlasToolBox into MarbleControlBox
	* src/katlastoolbox.ui  -> src/MarbleControlBox.ui
	* src/katlastoolbox.h   -> src/MarbleControlBox.h
	* src/katlastoolbox.cpp -> src/MarbleControlBox.cpp
	* src/CmakeLists.txt: use new name
	* src/marbleosx.pro:  use new name